# geoplotter

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/lib/: config.py  main.py
backend/lib/models/entities/: user_entity.py
backend/lib/models/responses/: get_file_response.py
backend/lib/routes/: file_router.py  user_router.py
backend/lib/services/: mybcrypt.py  myjwt.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: index.js  routes.js
frontend/src/components/Sidebar/: SidebarContent.js  SidebarResponsive.js  index.js
frontend/src/components/panels/: BoxmodelPanel.jsx  LoginPanel.jsx  MapPanel.jsx  SignupPanel.jsx
frontend/src/layouts/: Admin.js  DashboardLayout.js  MainLayout.jsx
frontend/src/pages/: _app.jsx  boxmodel.jsx  index.jsx  login.jsx  map.jsx  signup.jsx
frontend/src/views/Auth/: SignIn.js  SignUp.js
frontend/src/views/Dashboard/Main/: 2.jsx  3.jsx  4.jsx  BoxModel.jsx  Login.jsx  Login2.jsx  Polygon.jsx  Register.jsx  Shape.jsx  Signup.jsx  index.jsx
